FIXED: broken script tag + SDK load error

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ScorePredictor Pro</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Fixed: correct latest Auth0 SPA SDK -->
-  <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.min.js"></script>
+  <!-- FIXED: Official Auth0 SPA SDK CDN from docs -->
+  <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
   <style>
     body { font-family: system-ui, sans-serif; background: #0f172a; color: white; margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center; }
     .box { text-align:center; padding:3rem; background:#1e293b; border-radius:2rem; box-shadow:0 20px 40px rgba(0,0,0,0.5); max-width:500px; }
     button { background:white; color:black; padding:1rem 2rem; font-size:1.5rem; font-weight:bold; border-radius:1rem; cursor:pointer; margin-top:1rem; transition:all 0.2s; }
     button:hover { transform:scale(1.05); }
+    .error { color:#ef4444; font-size:1.2rem; margin-top:1rem; }
   </style>
 </head>
 <body>
@@ -27,6 +28,7 @@
       <label style="color:#94a3b8;">
         <input type="checkbox" id="remember" checked> Stay logged in
       </label>
+      <div id="error-msg" class="error" style="display:none;"></div>
     </div>
 
     <div id="logged-in" style="display:none; margin-top:2rem;">
@@ -41,50 +43,62 @@
 
   <script>
     let auth0 = null;
+    const errorEl = document.getElementById("error-msg");
 
-    async function initAuth0() {
-      auth0 = await createAuth0Client({
-        domain: "dev-3cwuyjrqj751y7nr.us.auth0.com",
-        client_id: "R8YeJdb0ZGuXY0QLcO1FexwRmCrfpw1w",
-        cacheLocation: "localstorage",
-        useRefreshTokens: true
-      });
+    // Check if SDK loaded
+    if (typeof createAuth0Client === 'undefined') {
+      errorEl.textContent = "Auth0 SDK failed to load (check internet or CDN). Try hard refresh (Ctrl+Shift+R).";
+      errorEl.style.display = "block";
+      throw new Error("Auth0 SDK not loaded");
+    }
 
-      // Handle callback
-      if (location.search.includes("code=") || location.search.includes("state=")) {
-        await auth0.handleRedirectCallback();
-        window.history.replaceState({}, document.title, "/");
-      }
-
-      // BUTTON WORKS — attached after client is ready
-      document.getElementById("login-button").addEventListener("click", () => {
-        const remember = document.getElementById("remember").checked;
-        auth0.loginWithRedirect({
-          redirect_uri: window.location.origin,
-          prompt: remember ? undefined : "login"
+    // Initialize Auth0
+    async function start() {
+      try {
+        auth0 = await createAuth0Client({
+          domain: "dev-3cwuyjrqj751y7nr.us.auth0.com",
+          client_id: "R8YeJdb0ZGuXY0QLcO1FexwRmCrfpw1w",
+          cacheLocation: "localstorage",
+          useRefreshTokens: true
         });
-      });
 
-      document.getElementById("logout").addEventListener("click", () => {
-        auth0.logout({ returnTo: window.location.origin });
-      });
+        // Handle redirect after login
+        if (location.search.includes("code=") || location.search.includes("state=")) {
+          await auth0.handleRedirectCallback();
+          window.history.replaceState({}, document.title, "/");
+        }
 
-      // Check if already logged in
-      const isAuthenticated = await auth0.isAuthenticated();
-      if (isAuthenticated) {
-        const user = await auth0.getUser();
-        document.getElementById("login-area").style.display = "none";
-        document.getElementById("logged-in").style.display = "block";
-        document.getElementById("name").textContent = user.name || user.email.split("@")[0];
-        document.getElementById("email").textContent = user.email;
+        // BUTTON — Attached after SDK is ready
+        document.getElementById("login-button").onclick = () => {
+          const remember = document.getElementById("remember").checked;
+          auth0.loginWithRedirect({
+            redirect_uri: window.location.origin,
+            prompt: remember ? undefined : "login"
+          }).catch(err => {
+            errorEl.textContent = "Login failed: " + err.message;
+            errorEl.style.display = "block";
+          });
+        };
+
+        document.getElementById("logout").onclick = () => {
+          auth0.logout({ returnTo: window.location.origin });
+        };
+
+        // Check if already logged in
+        if (await auth0.isAuthenticated()) {
+          const user = await auth0.getUser();
+          document.getElementById("login-area").style.display = "none";
+          document.getElementById("logged-in").style.display = "block";
+          document.getElementById("name").textContent = user.name || user.email.split("@")[0];
+          document.getElementById("email").textContent = user.email;
+        }
+      } catch (err) {
+        errorEl.textContent = "Auth0 init failed: " + err.message;
+        errorEl.style.display = "block";
       }
     }
 
-    // Start
-    initAuth0().catch(err => {
-      console.error("Auth0 init failed:", err);
-      document.getElementById("login-area").innerHTML += "<p style='color:red;'>Auth0 failed to load</p>";
-    });
+    start();
   </script>
 </body>
 </html>
