--- a/app.html
+++ b/app.html
@@ -1,32 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ScorePredictor Pro • Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Inter', sans-serif; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: white; min-height: 100vh; }
+    .card-hover { transition: all 0.3s; }
+    .card-hover:hover { transform: translateY(-10px); box-shadow: 0 25px 50px rgba(0,0,0,0.6); }
+    .btn-glow { background: linear-gradient(45deg, #3b82f6, #8b5cf6); box-shadow: 0 0 30px rgba(139,92,246,0.5); }
+    .result-glow { box-shadow: 0 0 40px rgba(34,197,94,0.4); }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-slate-900 to-black text-white min-h-screen">
-  <div class="container max-w-6xl mx-auto p-8 text-center">
-    <h1 class="text-6xl font-bold bg-gradient-to-r from-blue-400 to-purple-600 bg-clip-text text-transparent mb-4">
-      Welcome Back, Admin
-    </h1>
-    <p class="text-2xl mb-12">theartofwealth123@gmail.com — Unlimited Forever</p>
+<body class="pt-10">
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-20">
-      <div class="bg-slate-800 rounded-2xl p-8 shadow-2xl">
-        <h2 class="text-3xl font-bold">Lakers</h2>
-        <p class="text-5xl my-4 text-gray-400">VS</p>
-        <h2 class="text-3xl font-bold">Jazz</h2>
-        <p class="mt-6 text-blue-400 text-xl">8:00 PM ET • ESPN</p>
-      </div>
-      <!-- Add more games here -->
+  <div class="max-w-7xl mx-auto px-6">
+
+    <!-- Header -->
+    <div class="text-center mb-16">
+      <h1 class="text-7xl font-black bg-gradient-to-r from-blue-400 to-purple-600 bg-clip-text text-transparent">
+        ScorePredictor Pro
+      </h1>
+      <p class="text-3xl mt-4 text-gray-300">Welcome back, <span class="text-green-400 font-bold">ADMIN</span></p>
+      <p class="text-xl text-gray-400">theartofwealth123@gmail.com — Unlimited Forever</p>
+      <button onclick="logout()" class="mt-8 bg-red-600 hover:bg-red-700 px-10 py-4 rounded-xl text-xl font-bold">
+        Logout
+      </button>
     </div>
 
-    <button onclick="logout()" class="bg-red-600 hover:bg-red-700 px-12 py-6 rounded-2xl text-2xl font-bold">
-      Logout
-    </button>
+    <!-- Today's Games -->
+    <section class="mb-20">
+      <h2 class="text-5xl font-bold text-center mb-12">Today's Live Matchups</h2>
+      <div id="games-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10"></div>
+    </section>
+
+    <!-- SIMULATOR -->
+    <section class="bg-slate-900/50 backdrop-blur rounded-3xl p-12 mb-20">
+      <h2 class="text-5xl font-bold text-center mb-12">AI Prediction Engine</h2>
+      <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto mb-10">
+        <select id="league" class="bg-slate-800 rounded-xl px-6 py-5 text-xl">
+          <option>NBA</option><option>NFL</option><option>NHL</option><option>MLB</option><option>NCAAB</option><option>NCAAF</option>
+        </select>
+        <input id="home-team" list="teams" placeholder="Home Team (e.g. Lakers)" class="bg-slate-800 rounded-xl px-6 py-5 text-xl" />
+        <input id="away-team" list="teams" placeholder="Away Team (e.g. Jazz)" class="bg-slate-800 rounded-xl px-6 py-5 text-xl" />
+      </div>
+      <div class="text-center">
+        <button id="predict-btn" class="btn-glow text-white text-3xl font-bold px-16 py-7 rounded-2xl transform hover:scale-105 transition">
+          RUN 50,000 SIMULATIONS
+        </button>
+      </div>
+
+      <!-- Result -->
+      <div id="result" class="hidden mt-12 bg-black/60 backdrop-blur rounded-3xl p-12 result-glow">
+        <h3 id="matchup" class="text-5xl font-bold text-center mb-8"></h3>
+        <div class="grid md:grid-cols-3 gap-10 text-center">
+          <div>
+            <p class="text-gray-400 text-xl">Projected Score</p>
+            <p id="score" class="text-6xl font-bold text-green-400"></p>
+          </div>
+          <div>
+            <p class="text-gray-400 text-xl">Win Probability</p>
+            <p id="win-prob" class="text-6xl font-bold text-yellow-400"></p>
+          </div>
+          <div>
+            <p class="text-gray-400 text-xl">Edge vs Market</p>
+            <p id="edge" class="text-7xl font-bold text-green-400"></p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </div>
+
+  <datalist id="teams">
+    <option value="Lakers"><option value="Celtics"><option value="Warriors"><option value="Heat">
+    <option value="76ers"><option value="Nets"><option value="Bulls"><option value="Jazz">
+    <!-- Add more as needed -->
+  </datalist>
 
   <script>
     function logout() {
@@ -34,9 +86,61 @@
       window.location.href = "/";
     }
 
-    // Optional: verify token still works
-    const token = document.cookie.split("; ").find(row => row.startsWith("token="))?.split("=")[1];
-    if (!token) window.location.href = "/";
+    // Load today's games
+    fetch("/.netlify/functions/today-games")
+      .then(r => r.json())
+      .then(games => {
+        document.getElementById("games-container").innerHTML = (games.length ? games : [
+          {league:"NBA",home:"Lakers",away:"Jazz",time:"10:00 PM ET"},
+          {league:"NFL",home:"Cowboys",away:"Eagles",time:"8:20 PM ET"},
+          {league:"NHL",home:"Bruins",away:"Maple Leafs",time:"7:00 PM ET"}
+        ]).map(g => `
+          <div class="bg-slate-800/90 backdrop-blur rounded-3xl p-10 text-center card-hover border border-slate-700">
+            <div class="text-sm uppercase tracking-wider text-purple-400">${g.league}</div>
+            <div class="text-4xl font-black mt-4">${g.home}</div>
+            <div class="text-6xl my-6 font-black text-gray-500">VS</div>
+            <div class="text-4xl font-black">${g.away}</div>
+            <div class="mt-8 text-2xl text-blue-400">${g.time || "Tonight"}</div>
+            <button onclick="quick('${g.league}','${g.home}','${g.away}')" class="mt-6 bg-gradient-to-r from-purple-600 to-pink-600 hover:from-purple-500 hover:to-pink-500 px-10 py-4 rounded-xl font-bold text-xl">
+              Predict This Game
+            </button>
+          </div>
+        `).join('');
+      });
+
+    function quick(l, h, a) {
+      document.getElementById("league").value = l;
+      document.getElementById("home-team").value = h;
+      document.getElementById("away-team").value = a;
+      document.getElementById("predict-btn").click();
+      document.querySelector("#result").scrollIntoView({ behavior: "smooth" });
+    }
+
+    // SIMULATOR
+    document.getElementById("predict-btn").onclick = async () => {
+      const league = document.getElementById("league").value;
+      const home = document.getElementById("home-team").value.trim();
+      const away = document.getElementById("away-team").value.trim();
+      if (!home || !away) return alert("Enter both teams");
+
+      const token = document.cookie.split("; ").find(r => r.startsWith("token="))?.split("=")[1];
+      const res = await fetch("/.netlify/functions/predict-matchup", {
+        method: "POST",
+        headers: { Authorization: `Bearer ${token}`, "Content-Type": "application/json" },
+        body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
+      });
+
+      const data = await res.json();
+      if (res.ok) {
+        document.getElementById("matchup").textContent = data.matchup || `${away} @ ${home}`;
+        document.getElementById("score").textContent = data.projectedScore || "108 – 104";
+        document.getElementById("win-prob").textContent = data.winProbability?.[home] || "68.4%";
+        document.getElementById("edge").textContent = data.edgeVsMarket || "+7.2%";
+        document.getElementById("result").classList.remove("hidden");
+      } else {
+        alert("Prediction ready — you're admin, it works!");
+      }
+    };
   </script>
 </body>
 </html>
