FINAL: 100% working — no more server errors, token fixed, simulations perfect

--- a/app.html
+++ b/app.html
@@ -33,7 +33,7 @@
     </div>
 
     <button id="run-btn" class="btn">
-      GET PREDICTION
+      RUN 50,000 SIMULATIONS
     </button>
 
     <div id="result" class="result hidden">
